# parallel_solutions

./: CMakeLists.txt  README.md  consistent.cpp  parallel.cpp  test_and_compare.py
additionals/: solutions.h  time_measure.h
results/: consistent_results.txt  parallel_results.txt
